--- a/src/themes/components/card/_card-theme.scss
+++ b/src/themes/components/card/_card-theme.scss
@@ -1,4 +1,6 @@
-$components: register-component($components, 'igx-card');
+$component-name: 'igx-card';
+
+$components: register-component($components, #{$component-name});
 
 @function igx-card-theme(
     $background: null,
