--- a/src/themes/components/date-picker/_date-picker-theme.scss
+++ b/src/themes/components/date-picker/_date-picker-theme.scss
@@ -1,9 +1,10 @@
-$components: register-component($components, 'igx-date-picker');
+$component-name: 'igx-date-picker';
+
+$components: register-component($components, #{$component-name});
 
 @function igx-date-picker-theme(){
     @return ();
 }
-
 
 @mixin igx-date-picker($theme, $palette: $default-palette){
 
