--- a/src/themes/components/dialog/_dialog-theme.scss
+++ b/src/themes/components/dialog/_dialog-theme.scss
@@ -1,4 +1,6 @@
-$components: register-component($components, 'igx-dialog');
+$component-name: 'igx-dialog';
+
+$components: register-component($components, #{$component-name});
 
 @function igx-dialog-theme(
     $overlay-color:null,
