--- a/src/themes/components/avatar/_avatar-theme.scss
+++ b/src/themes/components/avatar/_avatar-theme.scss
@@ -1,4 +1,6 @@
-$components: register-component($components, 'igx-avatar');
+$component-name: 'igx-avatar';
+
+$components: register-component($components, #{$component-name});
 
 @function igx-avatar-theme($icon-background: null, $image-background: null) {
     @return (
@@ -10,10 +12,12 @@ $components: register-component($components, 'igx-avatar');
 @mixin igx-avatar($theme, $palette: $default-palette) {
     $default-theme: igx-avatar-theme(
         $icon-background: igx-color($palette, grays, 400),
-        $image-background: igx-color($palette, accent, 500)
+       $image-background: transparent
     );
 
     $this: extend($default-theme, $theme);
+
+    @debug $this;
 
     %igx-avatar-display {
         display: flex;
