--- a/src/themes/components/input/_input-theme.scss
+++ b/src/themes/components/input/_input-theme.scss
@@ -1,3 +1,7 @@
+$component-name: 'igx-input';
+
+$components: register-component($components, #{$component-name});
+
 @function igx-input-theme(
     $focused-color: null,
     $success-color: null,
@@ -22,7 +26,7 @@
 
     $this: extend($default-theme, $theme);
 
-    @debug $this;
+    // @debug $this;
 
     // Input Box
     $input-min-height: rem(70px) !default;
