--- a/src/themes/components/ripple/_ripple-theme.scss
+++ b/src/themes/components/ripple/_ripple-theme.scss
@@ -1,3 +1,7 @@
+$component-name: 'igx-ripple';
+
+$components: register-component($components, #{$component-name});
+
 @function igx-ripple-theme($color: null) {
     @return (
         color: $color
@@ -11,7 +15,7 @@
 
     $this: extend($default-theme, $theme);
     
-    @debug $this;
+    // @debug $this;
 
     %igx-ripple-display {
         display: inline-block;
