Change: Account for the changes done in 'src/themes/base' from the previous commit.

--- a/src/scroll/scroll.component.scss
+++ b/src/scroll/scroll.component.scss
@@ -1,3 +1,3 @@
-@import "../themes/base/utilities/index";
+@import "../themes/base/index";
 @import "../themes/material/config";
 @import "../themes/material/extends/scroll";
