--- a/src/navigation-drawer/navigation-drawer.component.scss
+++ b/src/navigation-drawer/navigation-drawer.component.scss
@@ -1,4 +1,4 @@
-@import "../themes/base/utilities/index";
+@import "../themes/base/index";
 @import "../themes/material/config";
 
 // Main Navigation Drawer state styles
