--- a/src/tabbar/tabbar.component.scss
+++ b/src/tabbar/tabbar.component.scss
@@ -1,4 +1,4 @@
-@import "../themes/base/utilities/index";
+@import "../themes/base/index";
 @import "../themes/material/config";
 @import "../themes/material/extends/tab";
 
