Update: 1. Remove the typography from the material folder; 2. Get colors from the generated palette; 3. Account for changes done to the base and exclude modules and extends from the manifest in the material theme.

--- a/src/themes/material/_manifest.scss
+++ b/src/themes/material/_manifest.scss
@@ -1,4 +1,3 @@
-@import '../base/index';
 @import 'config';
-@import 'extends/index';
-@import 'modules/index';
+// @import 'extends/index';
+// @import 'modules/index';
