--- a/src/themes/material/extends/_grid.scss
+++ b/src/themes/material/extends/_grid.scss
@@ -90,7 +90,7 @@
 
 %grid-cell--selected {
     color: $white;
-    background-color: $secondary-color !important;
+    background-color: igx-color($default-palette, 'accent') !important;
     border-bottom: 0;
     margin-bottom: -1px;
     box-shadow: inset 0 3px 1px rgba(0, 0, 0, .12);
