--- a/src/themes/base/utilities/_functions.scss
+++ b/src/themes/base/utilities/_functions.scss
@@ -23,57 +23,33 @@
 }
 
 @function gen-color($color, $saturation) {
-    @if ($saturation==50) {
+    @if ($saturation == 50) {
         @return lighten(saturate($color, 10.4), 37.7);
-    }
-    @else if ($saturation==100) {
+    } @else if ($saturation == 100) {
         @return lighten(desaturate($color, 10.4), 31.8);
-    }
-    @else if ($saturation==200) {
+    } @else if ($saturation == 200) {
         @return lighten(desaturate($color, 17), 18.7);
-    }
-    @else if ($saturation==300) {
+    } @else if ($saturation == 300) {
         @return lighten(desaturate($color, 12.9), 9.1);
-    }
-    @else if ($saturation==400) {
+    } @else if ($saturation == 400) {
         @return lighten(desaturate($color, 6.6), 4.1);
-    }
-    @else if ($saturation==600) {
+    } @else if ($saturation == 600) {
         @return darken(saturate($color, 12.4), 5.1);
-    }
-    @else if ($saturation==700) {
+    } @else if ($saturation == 700) {
         @return darken(saturate($color, 24.5), 8.8);
-    }
-    @else if ($saturation==800) {
+    } @else if ($saturation == 800) {
         @return darken(saturate($color, 23.2), 12.7);
-    }
-    @else if ($saturation==900) {
+    } @else if ($saturation == 900) {
         @return darken(saturate($color, 16.1), 17);
-    }
-    @else if ($saturation=='A100') {
+    } @else if ($saturation == 'A100') {
         @return lighten(saturate($color, 10.4), 16.7);
-    }
-    @else if ($saturation=='A200') {
+    } @else if ($saturation == 'A200') {
         @return lighten(saturate($color, 10.4), 7.7);
-    }
-    @else if ($saturation=='A400') {
+    } @else if ($saturation == 'A400') {
         @return darken(saturate($color, 10.4), 3.9);
-    }
-    @else if ($saturation=='A700') {
+    } @else if ($saturation == 'A700') {
         @return darken(saturate($color, 10.4), 16.6);
     }
-}
-
-// Retrieve color from palette map
-// @access public
-// @param {Map} $palette - Source palette map
-// @param {string} $saturation - Target color from palette
-@function palette($color, $variant: 500) {
-    $palette: $colors;
-    @if map-exists($palette) and map-key-exists($palette, $color) and map-key-exists($color, $variant) {
-        @return map-get(map-get($palette, $color), $variant);
-    }
-    @return #fff;
 }
 
 // Retrieve color from an igx palette map
@@ -102,8 +78,8 @@
 // @access public
 // @param {String} $n - Background color
 @function text-contrast($n) {
-    $color-brightness: round( (red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000);
-    $light-color: round( (red(#fff) * 299) + (green(#fff) * 587) + (blue(#fff) * 114) / 1000);
+    $color-brightness: round((red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000);
+    $light-color: round((red(#fff) * 299) + (green(#fff) * 587) + (blue(#fff) * 114) / 1000);
     @if abs($color-brightness) < ($light-color / 2) {
         @return #fff;
     } @else {
@@ -142,8 +118,8 @@
         $sign: '-';
         $num: abs($num);
     }
-    @if $num>=0 and $num < $radix {
-        @return $sign+str-slice($chars, ($num + 1), ($num + 1));
+    @if $num >= 0 and $num < $radix {
+        @return $sign + str-slice($chars, ($num + 1), ($num + 1));
     }
     $q: $num;
     @while $q !=0 {
@@ -151,7 +127,7 @@
         $q: floor($q / $radix);
         $result: str-slice($chars, ($r + 1), ($r + 1)) + $result;
     }
-    @return $sign+$result;
+    @return $sign + $result;
 }
 
 @function hexrgba($rgba) {
@@ -258,10 +234,9 @@
 
 @function register-component($components, $component) {
 
-
-        @if not(index($components, $component)) {
-            @return join($components, $component);
-        }
+    @if not(index($components, $component)) {
+        @return join($components, $component);
+    }
 
     @return $components;
 }
