--- a/src/themes/components/calendar/_calendar-theme.scss
+++ b/src/themes/components/calendar/_calendar-theme.scss
@@ -55,14 +55,15 @@ $components: register-component($components, #{$component-name});
         $value-year-hover-text-color: igx-color($palette, accent, 500),
         $value-month-hover-text-color: igx-color($palette, accent, 500),
         $value-selected-background-color: igx-color($palette, accent, 500),
-        $value-current-text-color:igx-color($palette, accent, 500),
-        $value-hover-background:igx-color($palette, grays, 100)
+        $value-current-text-color: igx-color($palette, accent, 500),
+        $value-hover-background: igx-color($palette, grays, 100)
     );
 
     $this: extend($default-theme, $theme);
 
 
     // 7. Calendar / Date Picker
+    $cal-theme-color: igx-color($palette, 'accent') !default;
     // Calendar Header
     $cal-header-year-fs: em(18px, 16px) !default;
     $cal-header-year-lh: em(16px, 16px) !default;
@@ -71,7 +72,7 @@ $components: register-component($components, #{$component-name});
     $cal-header-date-lh: em(16px, 16px) !default;
     $cal-header-date-margin: 0 !default;
 
-    $cal-header-color: text-contrast(map-get($this, 'calendear-header-background')) !default;
+    $cal-header-color: text-contrast(map-get($this, 'header-background')) !default;
     $cal-header-year-color: transparentize($cal-header-color, .2) !default;
 
     $cal-header-padding: em(24px) em(16px) !default;
@@ -151,6 +152,18 @@ $components: register-component($components, #{$component-name});
         padding-bottom: $cal-picker-padding;
         padding-left: $cal-picker-padding;
         padding-right: $cal-picker-padding;
+
+        .date {
+            @extend %cal-picker-date !optional;
+            &__el:hover,
+            &__el:focus {
+                @extend %cal-header-date-el--hover !optional;
+            }
+        }
+        .next,
+        .prev {
+            @extend %cal-picker-arrow !optional;
+        }
     }
 
     %cal-picker-arrow {
@@ -248,6 +261,7 @@ $components: register-component($components, #{$component-name});
     }
 
     %cal-value--inactive {
+        cursor: pointer;
         color: map-get($this, value-inactive-text-color);
     }
 
