--- a/src/themes/components/card/_card-theme.scss
+++ b/src/themes/components/card/_card-theme.scss
@@ -97,6 +97,10 @@ $components: register-component($components, #{$component-name});
         line-height: $card-subtitle-line-height;
     }
 
+    %igx-card-tgroup {
+        margin: $card-tgroup-margin;
+    }
+
     %igx-card-content {
         // flex: 1 0 100%;
         flex-basis: 100%;
