--- a/src/themes/components/radio/_radio-theme.scss
+++ b/src/themes/components/radio/_radio-theme.scss
@@ -17,6 +17,17 @@ $components: register-component($components, #{$component-name});
 
     // @debug $this;
 
+    // Defaults for all input controls
+    // TODO: Rename to match component name
+    $input-font-size: em(16px) !default;
+    $input-font-weight: 400 !default;
+    $input-color: igx-color($palette, 'grays', 900) !default;
+    $input-border-color: igx-color($palette, 'grays', 500) !default;
+    $input-border-color-focus: igx-color($palette, 'accent') !default;
+    $input-transition: all .2s ease-in !default;
+    $input-disabled-color: igx-color($palette, 'grays', 500) !default;
+    $checkbox-label-padding: em(24px, 16px) !default;
+
     $radio-fill-color: map-get($this, 'color') !default;
     $radio-empty-color: igx-color($palette, 'grays', 600) !default;
     $radio-border-style: 2px solid !default;
