--- a/src/themes/components/scroll/_scroll-theme.scss
+++ b/src/themes/components/scroll/_scroll-theme.scss
@@ -11,14 +11,15 @@ $components: register-component($components, #{$component-name});
 
   $this: extend($default-theme, $theme);
 
-  // @debug $this;
+//   @debug $this;
 
-  .igx-scroll__viewport {
+  
+  %igx-scroll__viewport {
     display: inline-block;
     overflow-y: hidden;
   }
 
-  .igx-scroll__vertical {
+  %igx-scroll__vertical {
     display: inline-block;
     width: 20px;
     overflow-y: auto;
