Change: Move _core to themes folder.

--- a/src/themes/themes/_index.scss
+++ b/src/themes/themes/_index.scss
@@ -1,5 +1,5 @@
-// Import the core module first
-@import '../core';
+// Import the core modules first
+@import 'core';
 
 // Import all themable component mixins
 @import 'palettes';
