--- a/src/themes/components/input/_input-theme.scss
+++ b/src/themes/components/input/_input-theme.scss
@@ -26,7 +26,7 @@ $components: register-component($components, #{$component-name});
 
     $this: extend($default-theme, $theme);
 
-    // @debug $this;
+    @debug $this;
 
     // Input Box
     $input-min-height: rem(70px) !default;
