removing flex rules so that columns can extend pass the grid's width

--- a/src/themes/material/extends/_grid.scss
+++ b/src/themes/material/extends/_grid.scss
@@ -69,7 +69,7 @@
 }
 
 %grid-cell-display {
-    flex: 1;
+    /*flex: 1;*/
     outline-style: none;
     padding: $grid-cell-padding;
     font-size: $grid-cell-fs;
@@ -82,7 +82,7 @@
 }
 
 %grid-cell--fixed-width {
-    flex-grow: 0;
+    /*flex-grow: 0;*/
 }
 
 %grid-cell-number {
