--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -37,10 +37,9 @@
 </div>-->
 
 <div class="igx-grid__tbody" [style.height]='height' [style.width]='width' >
-        <ng-template igVirtFor="let item of data | gridFiltering:filteringExpressions:filteringLogic:id:pipeTrigger
+        <ng-template igVirtFor let-rowData [igVirtForOf]="data | gridFiltering:filteringExpressions:filteringLogic:id:pipeTrigger
                                 | gridSort:sortingExpressions:id:pipeTrigger
-                                | gridPaging:page:perPage:id:pipeTrigger;
-                                index as i;" let-rowData [igVirtForOf]="data" let-rowIndex="index" [igVirtForScrolling]="'vertical'" [igVirtForContainerSize]='height' #scrollContainer>
+                                | gridPaging:page:perPage:id:pipeTrigger" let-rowIndex="index" [igVirtForScrolling]="'vertical'" [igVirtForContainerSize]='height' #scrollContainer>
            <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData">
            </igx-grid-row>
         </ng-template>
