Adding igxList sample using igVirtFor. Removing hardcoded item size for vertical virtualization.

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -72,6 +72,11 @@
                     <igx-icon fontSet="material" name="list"></igx-icon>
                     <span>List</span>
                 </span>
+                
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/listPerformance">
+                    <igx-icon fontSet="material" name="list"></igx-icon>
+                    <span>List Performance</span>
+                </span>
 
                 <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navbar">
                     <igx-icon fontSet="material" name="arrow_back"></igx-icon>
