--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="grid.fixingDirection === 'left'" >
-    <igx-grid-cell *ngFor="let c of fixedColumns" [column]="c" [row]="this" [value]="rowData[c.field]" [cellTemplate]="c.bodyTemplate"></igx-grid-cell>
+    <igx-grid-cell *ngFor="let col of fixedColumns" [column]="col" [row]="this" [style.width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-container>
 <ng-template igVirtFor let-col [igVirtForOf]="unfixedColumns" [igVirtForUseForScroll]="grid.parentVirtDir" let-colIndex="index" [igVirtForScrolling]="'horizontal'" [igVirtForContainerSize]='grid.unfixedWidth'>
-    <igx-grid-cell [column]="col" [row]="this" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
+    <igx-grid-cell [column]="col" [row]="this" [style.width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-template>
 <ng-container *ngIf="grid.fixingDirection === 'right'" >
-    <igx-grid-cell *ngFor="let c of fixedColumns" [column]="c" [row]="this" [value]="rowData[c.field]" [cellTemplate]="c.bodyTemplate"></igx-grid-cell>
+    <igx-grid-cell *ngFor="let col of fixedColumns" [column]="col" [row]="this" [style.width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-container>
